# clip-avc-aerial

./: .gitignore  README.md  pyproject.toml
data/: __init__.py  era.py  mod20.py  video_dataset.py
losses/: __init__.py  info_nce.py
models/: __init__.py  clip_avc.py  clip_encoder.py  context_enriched.py  cross_transformer.py  temporal_transformer.py  text_encoder.py  transformer_blocks.py  video_swin.py
scripts/: collect_experiment_results.py  eval.py  run_adaptive_case.sh  run_adaptive_encoder_search.sh  run_encoder_sweep.sh  run_gpu_repro.sh  run_overnight_encoder_search.sh  run_paper_pretraining_matrix.sh  shape_test.py  train.py
utils/: prompts.py
